# virt-pack

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  install.sh  virt-pack
doc/: documentation.md
include/: commands.h  installer.h  parser.h  resolver.h  uninstaller.h  util.h
scripts/: apt-info.sh  apt-install.sh  apt-uninstall.sh  bear-intercept.sh  deb_install.sh  update_db.py  xbps-bootstrap.sh  xbps-info.sh  xbps-install.sh  xbps-resolve.sh  xbps-uninstall.sh
src/: commands.h  deb_install.sh  installer.c  installer.h  main.c  make.c  parser.c  parser.h  resolver.c  resolver.h  show.c  uninstaller.c  uninstaller.h  util.c  util.h
src/commands/: help.c  make.c  remove.c  show.c
test-cmake/: CMakeLists.txt  main.c
test-make/: Makefile  events.json  main.c  virt-pack-test-make
